// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAccountSelector renders an account selector 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <TouchableHighlight>
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              style={
                [
                  {
                    "flexDirection": "column",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#b4b4b528",
                      "borderRadius": 12,
                      "columnGap": 8,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "space-between",
                      "minWidth": 80,
                      "opacity": 1,
                      "overflow": "hidden",
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "width": "100%",
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b4b4b566",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "height": "auto",
                      "maxHeight": 58,
                      "minHeight": 48,
                      "paddingBottom": 8,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 8,
                    },
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
                testID="snap-ui-renderer__selector"
              >
                <View
                  style={{}}
                />
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#131416",
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
            <View />
          </View>
        </TouchableHighlight>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIAccountSelector renders inside a field 1`] = `
<View
  style={
    [
      {
        "flexGrow": 1,
        "minHeight": 667,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "flexDirection": "column",
          "flexGrow": 1,
        },
      ]
    }
  >
    <RCTScrollView
      style={
        {
          "marginBottom": 0,
        }
      }
      testID="snap-ui-renderer__scrollview"
    >
      <View>
        <TouchableHighlight>
          <View
            color="Default"
            flexDirection="column"
            gap={8}
            justifyContent="flex-start"
            style={
              [
                {
                  "color": "Default",
                  "flexDirection": "column",
                  "gap": 8,
                  "justifyContent": "flex-start",
                },
                {
                  "gap": 16,
                  "margin": 16,
                },
              ]
            }
          >
            <View
              flexDirection="column"
              style={
                [
                  {
                    "flexDirection": "column",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                Account Selector
              </Text>
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#b4b4b528",
                      "borderRadius": 12,
                      "columnGap": 8,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "space-between",
                      "minWidth": 80,
                      "opacity": 1,
                      "overflow": "hidden",
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "width": "100%",
                    },
                    {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b4b4b566",
                      "borderRadius": 8,
                      "borderWidth": 1,
                      "height": "auto",
                      "maxHeight": 58,
                      "minHeight": 48,
                      "paddingBottom": 8,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 8,
                    },
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
                testID="snap-ui-renderer__selector"
              >
                <View
                  style={{}}
                />
                <SvgMock
                  fill="currentColor"
                  name="ArrowDown"
                  style={
                    [
                      {
                        "color": "#131416",
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
            <View />
          </View>
        </TouchableHighlight>
      </View>
    </RCTScrollView>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;
